--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Taller Evento</title>
 </head>
 <body>
-    <button>Saludar</button>
+    <button onclick="alert('Hola!')">Saludar</button>
 </body>
 </html>
