--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="padding: 5px; background-color: green;">
-        <button onclick="alert('Hola!')">Saludar</button>
+        <button onclick="saludoBtn(event)">Saludar</button>
     </div>
 </body>
 </html>
